# kappelas-sdk-python

./: .gitignore  README.md  pyproject.toml  test_all.py  test_communities.py  test_communities_live.py  test_live.py  test_send_target.py  test_user_live.py
src/kappelas/: __init__.py  _emitter.py  _http.py  _parsers.py  _ws.py  bot.py  errors.py  types.py  user.py
src/kappelas/resources/: __init__.py  chats.py  communities.py  messages.py  profile.py  stories.py  webhooks.py
