[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kappelas-sdk"
version = "0.8.1"
description = "Official Kappela SDK for Python — build bots and personal automations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Arnel LAWSON", email = "arnellawson7@gmail.com"}]
keywords = ["kappela", "bot", "sdk", "messaging", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
]

[project.urls]
Homepage = "https://github.com/Arnel7/kappelas-sdk-python"
Repository = "https://github.com/Arnel7/kappelas-sdk-python"
"Bug Tracker" = "https://github.com/Arnel7/kappelas-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kappelas"]
